# Open-Codex-CLI

./: FEATURES.md  README.md  justfile
.github/: blob-size-allowlist.txt
.github/scripts/: update_npm_download_chart.py
.github/workflows/: open-codex-release.yml  update-npm-download-chart.yml
.planning/: 2026-05-20-merge-upstream-handoff.md
codex-cli/: package.json
codex-cli/scripts/: README.md  build_npm_package.py
codex-rs/: Cargo.toml  README.md
codex-rs/.cargo/: config.toml
codex-rs/agent-view/: Cargo.toml
codex-rs/agent-view/src/: cli.rs  lib.rs  peek.rs  scanner.rs  view.rs
codex-rs/analytics/src/: reducer.rs
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  in_process.rs  message_processor.rs  request_processors.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: doctor.rs  main.rs  npm_status.rs  responses_cmd.rs
codex-rs/codex-api/src/: auth.rs
codex-rs/config/src/: config_toml.rs
codex-rs/core/: Cargo.toml  config.schema.json
codex-rs/core/src/: client.rs  codex.rs  codex_tests.rs  codex_thread.rs  commit_attribution.rs  commit_attribution_tests.rs  compact.rs  compact_tests.rs  file_history.rs  lib.rs  mcp_openai_file.rs  thread_manager.rs  (+2 more)
codex-rs/models-manager/: Cargo.toml
codex-rs/tui/: Cargo.toml
docs/: config.md  parallel-first-agent-execution.md
docs/open-codex/: README.md  agents-md-snippet.md  parallel-first-agent-execution.md
scripts/: stage_npm_packages.py
sdk/typescript/: package.json
(+325 files in other folders)
